--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 		</license>
 	</licenses>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/rhjokada/redmine-oauth-plugin</url>
+		</repository>
+	</distributionManagement>
+
 	<repositories>
 		<repository>
 			<id>repo.jenkins-ci.org</id>
