--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>2.7</version>
+		<version>4.7</version>
 	</parent>
 
 	<groupId>org.jenkins-ci.plugins</groupId>
@@ -41,13 +41,13 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.2.2</version>
+			<version>2.8.6</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.scribe</groupId>
 			<artifactId>scribe</artifactId>
-			<version>1.3.3</version>
+			<version>1.3.7</version>
 		</dependency>
 	</dependencies>
 
@@ -57,8 +57,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>8</source>
+					<target>8</target>
 					<debug>true</debug>
 				</configuration>
 			</plugin>
@@ -66,7 +66,7 @@
 			<plugin>
 				<groupId>org.jenkins-ci.tools</groupId>
 				<artifactId>maven-hpi-plugin</artifactId>
-				<version>1.77</version>
+				<version>3.15</version>
 				<extensions>true</extensions>
 				<configuration>
 					<compatibleSinceVersion>0.3</compatibleSinceVersion>
@@ -78,6 +78,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<jenkins.version>1.645</jenkins.version>
+		<jenkins.version>2.249.1</jenkins.version>
+		<java.level>8</java.level>
 	</properties>
 </project>
