--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -5,9 +5,11 @@ name: Java CI with Maven And Upload
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
   build:
@@ -28,5 +30,5 @@ jobs:
     - name: upload artifcat
       uses: actions/upload-artifact@v2
       with:
-        name: my-artifact
+        name: redmine-oauth-${GITHUB_REF##*/}.hpi
         path: target/redmine-oauth.hpi
