--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,5 +30,5 @@ jobs:
     - name: upload artifcat
       uses: actions/upload-artifact@v2
       with:
-        name: redmine-oauth-${GITHUB_REF##*/}.hpi
+        name: redmine-oauth.hpi
         path: target/redmine-oauth.hpi
